Databases: Added a decent amount of data to be used with testing.

--- a/main.html
+++ b/main.html
@@ -79,6 +79,7 @@
                                <th>MemberID</th>   
                                <th>First Name</th> 
                                <th>Last Name</th> 
+                               <th>Grade Level</th>
                                <th>Email</th>
                                <th>Gender</th>
                             </tr>
@@ -91,6 +92,5 @@
             
         </div>
     </div>
-    <h1>Pooop</h1>
 </body>
 </html>
