--- a/main.html
+++ b/main.html
@@ -5,6 +5,9 @@
         a, u {
             text-decoration: none;
         }
+        th{
+            text-align: center;
+        }
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/photon.min.css">    
@@ -38,16 +41,18 @@
             for(var i = 0; i<result.length; i++){
                 var row = tableBody.insertRow(tableBody.rows.length)
                 var MemberId = row.insertCell(0);
-                var Fname = row.insertCell(1);
-                var Lname = row.insertCell(2);
-                var Email = row.insertCell(3);
-                var Gender = row.insertCell(4);
+                var Highschool = row.insertCell(1);
+                var Fname = row.insertCell(2);
+                var Lname = row.insertCell(3);
+                var Email = row.insertCell(4);
+                var Gender = row.insertCell(5);
 
                 MemberId.innerHTML = result[i].memberID;
                 Fname.innerHTML = result[i].Fname;
                 Lname.innerHTML = result[i].Lname;
                 Email.innerHTML = result[i].Email;
                 Gender.innerHTML = result[i].Gender;
+                Highschool.innerHTML = result[i].school_name;
             }
         }   
     </script>
@@ -92,6 +97,7 @@
                         <thead id="tableHeader">
                             <tr>
                                <th>MemberID</th>   
+                               <th>School</th>
                                <th>First Name</th> 
                                <th>Last Name</th> 
                                <th>Email</th>
